[refactor] replace URL constructor